# Assembler

./: .gitattributes  .gitignore.txt  CMakeLists.txt  LICENSE  README.md  assembler.c  assembler.h  makefile  test.as  utils.c  utils.h
src/: assembler.c  assembler.h  dataLine.c  dataLine.h  errors.c  errors.h  fileHandler.c  fileHandler.h  instructionLine.c  instructionLine.h  lineAnalyzer.c  lineAnalyzer.h  main.c  makefile  memoryManager.c  memoryManager.h  mozarUtils.c  mozarUtils.h  parser.c  parser.h  resultFilesHandler.c  resultFilesHandler.h  utils.c  utils.h
